<resources>
    <string name="app_name">StoreAdmin</string>

    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_image">loginImage</string>
    <string name="create_your_account">Create Your Account?</string>
    <string name="click"><u>Click</u></string>

    <string name="sign_up">SignUp</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_order">Order</string>
    <string name="menu_product">Product</string>
    <string name="menu_logout">Logout</string>

    <string name="home_second">Home Second</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>

    <string name="profile_image">profileImage</string>
    <string name="user_name">User Name</string>
    <string name="orders">Orders</string>
    <string name="_100">100</string>
    <string name="pending">Pending</string>
    <string name="_50">50</string>
    <string name="cart">Cart</string>
    <string name="_20">20</string>
    <string name="user_email">Albert@gmail.com</string>
    <string name="_266_225_225">+266 225 225</string>
    <string name="_0">0</string>
    <string name="complete">Complete</string>

    <string name="order_no">Order No:</string>
    <string name="view_details">View Details</string>
    <string name="_162115">162115</string>
    <string name="order_amount">Order Amount:</string>
    <string name="_1599">₹1599</string>
    <string name="order_status">Order Status:</string>
    <string name="order_in_process">Order In Process</string>
    <string name="_12_06_2020">12/06/2020</string>
    <string name="rup">₹</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="_15992">1599</string>
    <string name="order_detail">Order Detail</string>
    <string name="product_image">Product Image</string>
    <string name="product_name">Product Name</string>
    <string name="men_white_printed_round_neck_t_shirt">Men White Printed Round Neck T-shirt</string>
    <string name="qty_price">Qty/Price:</string>
    <string name="_2_150">2/150</string>
    <string name="_300">₹300</string>
    <string name="men_pink_solid_polo_collar_slim_fit_t_shirt">Men Pink Solid Polo Collar Slim Fit T-shirt</string>
    <string name="store_name">Store Name:</string>
    <string name="address">Address:</string>
    <string name="store_address">Store Address</string>
    <string name="email">Email:</string>
    <string name="blackwell_gmail_com">blackwell@gmail.com</string>
    <string name="mobile">Mobile:</string>
    <string name="_919966332255">+919966332255</string>
    <string name="buy_again">Buy Again</string>

    <string name="search">Search</string>
    <string name="location">Location</string>
    <string name="positive_and_natural">Positive And Natural</string>
    <string name="title_activity_maps">Map</string>
    <string name="find_store">Find Store</string>
    <string name="qty">Qty:</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="view_cart">View Cart</string>
    <string name="place_order">place Order</string>
    <string name="store_qr">QR Code</string>
    <string name="user_name2">Username:</string>
    <string name="store_name2">Store Name</string>
    <string name="store_address2">Store Address</string>
    <string name="pick_store">Pick Store</string>
    <string name="custom_toast">Custom Toast</string>

    <string name="server_msg">No Internet Connection</string>
    <string name="server_msg2">No Data Found</string>
    <string name="store_email">Store Email</string>
    <string name="store_mobile">Store Mobile</string>
    <string name="product_add">Product Add</string>
    <string name="submit">Submit</string>
    <string name="product_description">Product Description</string>
    <string name="product_qty">Product Qty</string>
    <string name="product_amount">Product Amount</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="back">Back</string>
    <string name="product_edit">Product Edit</string>
    <string name="cancel">Cancel</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_location">Change Location</string>
    <string name="review">Review</string>
    <string name="question_one" translatable="false">Q-1: Was this application helpful to let you keep your social distance?</string>
    <string name="question_two" translatable="false">Q-2: Was this application helped you save your time than usual?</string>

</resources>
