<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_margin="10dp"
        android:contentDescription="@string/product_image"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_app_logo" />

    <LinearLayout
        android:id="@+id/lay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/productImage"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/productName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_toStartOf="@+id/viewDetail"
                android:text="@string/product_name"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/viewDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:padding="5dp"
                android:text="@string/view_details"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="12sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp">

            <TextView
                android:id="@+id/productQtyTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/qty"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/productQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_toEndOf="@+id/productQtyTxt"
                android:alpha="0.6"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/productAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/_0"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/productDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:alpha="0.6"
                android:padding="5dp"
                android:text="@string/delete"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <RelativeLayout
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="10dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_toStartOf="@+id/productDelete"
                android:background="@color/gray" />

            <TextView
                android:id="@+id/productEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/divider"
                android:alpha="0.6"
                android:padding="5dp"
                android:text="@string/edit"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/pdLay"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@+id/productEdit"
                android:visibility="gone" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/lay1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/gray" />

</RelativeLayout>