<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.ReviewShowActivity">

    <RelativeLayout
        android:id="@+id/lay1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical">

        <RelativeLayout
            android:id="@+id/back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/ic_back"
                android:gravity="center" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/back"
            android:padding="10dp"
            android:text="@string/review"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/pdLay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/mainLay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/lay1"
        android:layout_margin="10dp"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:text="@string/question_one"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:targetApi="o" />

            <RatingBar
                android:id="@+id/qOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:isIndicator="true"
                android:numStars="5"
                android:scaleX="0.6"
                android:scaleY="0.6"
                android:stepSize="1.0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:justificationMode="inter_word"
                android:text="@string/question_two"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                tools:targetApi="o" />

            <RatingBar
                android:id="@+id/qTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:isIndicator="true"
                android:numStars="5"
                android:scaleX="0.6"
                android:scaleY="0.6"
                android:stepSize="1.0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/review"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:justificationMode="inter_word"
                android:text="@string/review"
                android:textColor="@color/black"
                android:textSize="13sp"
                android:textStyle="normal"
                tools:targetApi="o" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>